objects/AR_SFObj1__c.object
<CustomObject>
    <description>Add Comment for this Object</description>
    <fields>
        <fullName>AR_SFFeid3__c</fullName>
        <label>AR-SFFeid3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AR_SFField1__c</fullName>
        <description>Add Desc AR-SFField1</description>
        <label>AR-SFField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AR_SFField2__c</fullName>
        <description>Add  comment for AR-SFField2</description>
        <label>AR-SFField2</label>
        <type>Date</type>
    </fields>
    <label>AR-SFObj1</label>
    <nameField>
        <label>AR-SFObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARSFObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>